# django-example-app

./: .gitignore  Dockerfile  Makefile  entrypoint.sh  manage.py  pyproject.toml
.ropeproject/: autoimport.db
core/api/: filters.py  schemas.py  urls.py
core/api/v1/: urls.py
core/api/v1/products/: filters.py  handlers.py
core/api/v1/products/schemas/: __init__.py  productListSchema.py  productSchema.py
core/apps/common/: models.py
core/apps/products/: admin.py  apps.py
core/apps/products/entities/: products.py
core/apps/products/migrations/: 0001_initial.py  0002_rename_created_ad_product_created_at_and_more.py
core/apps/products/models/: products.py
core/apps/products/services/: products.py
core/project/settings/: main.py
docker_compose/: app.yaml  storages.yaml
